@@ -56,7 +56,7 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-04-27 17:37:48 L.248'22932 T578988065 .K ~90  +----+----+----+----+----+
+     Zndex_E : //z 2015-04-27 17:54:25 L.248'21935 T581252027 .K ~94  +----+----+----+----+----+
      TimeCnt : //z 2015-04-27 16:48:05 L.248'25915 T3583709115.K ~3   +----+----+----+----+----+
      Reg.Cnt : //z 2015-04-27 16:23:21 L.248'27399 T3581157650.K ~4   +----+----+----+----+----+
      #4   R+ : //z 2015-04-27 16:23:21 L.248'27399 T3581157650.K ~4     V+.46   L+.132  
@@ -64,7 +64,8 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-04-27 17:37:48 L.248'22932 T578988065 .K ~94    R+.4    L+.155  --+----+
+     Version : //z 2015-04-27 17:54:25 L.248'21935 T581252027 .K ~98    R+.4    L+.156  --+----+
+     #5   V+ : //z 2015-04-27 17:54:13 L.248'21947 T581251992 .K ~95    R+.4    L+.156  
      #4   V+ : //z 2015-04-27 16:35:40 L.248'26660 T3582415510.K ~76    R+.4    L+.139  
      #3   V+ : //z 2015-04-27 16:25:20 L.248'27280 T3581229523.K ~57    R+.4    L+.136  
      #2   R+ : //z 2015-04-27 16:23:21 L.248'27399 T3581157650.K ~46    R+.4    L+.133  V+.46   
