@@ -53,3 +53,14 @@ Changes to be committed:
 	modified:   History.txt
 	modified:   update.bat
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+D.E.2015/04/27.18_03_13.23.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
